--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capstone-static-version",
+  "name": "react-redux-marine-resort",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
